<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.twurl.ViewArticle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/twurl_blue"
        android:padding="10dp"
        android:id="@+id/articleCustomMenu">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/exit_article_view"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:id="@+id/exitArticle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/otherShare"
            android:text="@string/other_share_icon"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareEmail"
            android:layout_centerVertical="true"
            android:text="@string/mail_icon"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_toLeftOf="@id/otherShare"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareTwitter"
            android:layout_centerVertical="true"
            android:text="@string/twitter_icon"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_toLeftOf="@id/shareEmail"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/shareFacebook"
            android:text="@string/facebook_icon"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_toLeftOf="@id/shareTwitter"/>

    </RelativeLayout>


    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/articleWebView"
        android:layout_below="@id/articleCustomMenu"
        android:layout_above="@+id/adView"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>
